--- a/app/views/sub_courses/collect_or_praise.js.erb
+++ b/app/views/sub_courses/collect_or_praise.js.erb
@@ -12,7 +12,7 @@
   <% end %>
   span.text(count);
 
-  alert('<%= @like ? "#{type}成功" : "取消#{type}" %>');
+  // alert('<%= @like ? "#{type}成功" : "取消#{type}" %>');
 
 <% else %>
   alert("收藏失败");
