--- a/app/views/user/my_courses.html.erb
+++ b/app/views/user/my_courses.html.erb
@@ -26,7 +26,9 @@
           <% @collect_course.each do |course| %>
             <div class="row my-course">
               <div class="col-sm-3 ov-hidden text-center">
-                <%= link_to image_tag(course.attachment.content.url(:c_350_230), width: "100%"), show_courses_path(course.number), class: 'img' if course.attachment%>
+                <%= link_to image_tag(course.try(:image).try(:avatar).url(:c_500_350), width: "100%"), show_courses_path(course.number), class: 'img' if course.attachment %>
+
+                <%#= link_to image_tag(course.attachment.content.url(:c_350_230), width: "100%"), show_courses_path(course.number), class: 'img' if course.attachment%>
               </div>
               <div class="col-sm-9">
                 <div class="my-course-desc"> 
