--- a/app/views/wechat/users/edit.html.erb
+++ b/app/views/wechat/users/edit.html.erb
@@ -111,9 +111,9 @@
     <div class="weui_cells_title">个性签名</div>
     <div class="weui_cells weui_cells_form">
       <div class="weui_cell">
-        <div class="weui_cell_bd weui_cell_primary">
-          <%= f.text_area :signature, class: "weui_textarea", placeholder: "请输入个性签名", row: 3 %>
-          <div class="weui_textarea_counter"><span>0</span>/200</div>
+        <div id="weui_textarea_cell" class="weui_cell_bd weui_cell_primary">
+          <%= f.text_area :signature, class: "weui_textarea", placeholder: "请输入个性签名", row: 3, maxlength: 200 %>
+          <div id="numtj" class="weui_textarea_counter"><var style="color:#C00">--</var>／200</div>
         </div>
       </div>
     </div>
@@ -130,6 +130,18 @@
 <% end %>
 
 <script>
+//字数统计效果
+  $(document).ready(function(){
+    var text=$("#weui_textarea_cell textarea").val();
+    var counter=text.length;
+    $("#numtj var").text(counter);
+    $(document).keyup(function() {
+        var text=$("#weui_textarea_cell textarea").val();
+        var counter=text.length;
+        $("#numtj var").text(counter);
+    });
+  });
+
   $(function() {
     $("#user_image").change(function(){
       var file =document.getElementById('user_image').files[0];
