--- a/app/views/admin/users/_user.html.erb
+++ b/app/views/admin/users/_user.html.erb
@@ -15,8 +15,8 @@
     <%= link_to edit_admin_user_path(user), class: 'btn btn-xs btn-default', title: '编辑' do %>
       <span class="glyphicon glyphicon-edit"></span>
     <%end%>
-    <%= link_to nil, class: 'btn btn-xs btn-danger', title: '删除' do %>
-      <span class="glyphicon glyphicon-trash"></span>
+    <%= link_to admin_user_path(user), data:{ confirm: '确认删除该学生吗?'}, method: :delete, class: 'btn btn-xs btn-danger', title: '删除' do %>
+          <span class="glyphicon glyphicon-trash"></span>
     <%end%>
   </td>
 </tr>
