--- a/app/assets/stylesheets/application/courses.scss
+++ b/app/assets/stylesheets/application/courses.scss
@@ -149,7 +149,7 @@ body.courses__index, body.courses__learning_center, body.teachers__index {
   }
   .baseContent {
     ul {
-      display: none;
+      display: block;
     }
     ul li {
       height: 34px;
