fix sub_course tag bug and add sub_page 5

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -122,6 +122,11 @@
       <%= javascript_include_tag  "_toggle", 'data-turbolinks-track' => true %>
     <%end%>
     <%= render partial: "courses/4/main", locals: {teacher_courses: @teacher_courses} %>
+  <% elsif @course.number == "95842760" %>
+    <%= content_for :script do %>
+      <%= javascript_include_tag  "_toggle", 'data-turbolinks-track' => true %>
+    <%end%>
+    <%= render partial: "courses/5/main", locals: {teacher_courses: @teacher_courses} %>
   <% end %>
 </div>
 
